--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,10 @@ jobs:
       - name: "Install Dependency"
         run: yarn install
 
-      - uses: cloudflare/wrangler-action@1.3.0
-        name: "Publish"
-        with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
+      - name: "Install wrangler"
+        run: yarn global add @cloudflare/wrangler
+
+      - name: "Publish"
+        env:
+          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+        run: wrangler publish
